--- a/min/kvs/Cargo.toml
+++ b/min/kvs/Cargo.toml
@@ -9,6 +9,7 @@ description = "a key-value store"
 
 [dependencies]
 clap = "2.33.2"
+structopt = "0.3.21"
 
 [dev-dependencies]
 assert_cmd = "0.11.0"
